# backend/api.yaml
@@ -229,68 +229,3 @@ paths:
                                 default: 'password updated'
                 400:
                     description: error in updating password
-    #fixtures
-    /match/fixtures:
-        get:
-            summary: get the fixtures
-            parameters:
-                - in: body
-
-            responses:
-                200:
-                    description: fixtures displayed
-                    schema:
-                        type: object
-                        properties:
-                            message:
-                                type: string
-                                default: 'Success'
-                400:
-                    description: error in displaying fixtures
-    #standings
-    /match/standings:
-        get:
-            summary: get the standings
-            parameters:
-                - in: body
-                schema:
-                    type: object
-                    properties:
-                    leagueId:
-                        type: string
-                        default: '207'
-            response:
-                200:
-                    description: display standings for the league
-                    schema:
-                        type: object
-                        properties:
-                            message:
-                                type: string
-                                default: 'Success'
-                400:
-                    description: error in displaying standings
-    #topScorer
-    /match/topScorer:
-        get:
-            summary: get the topScorer
-            parameters:
-                - in: body
-                schema:
-                    type: object
-                    properties:
-                    leagueId:
-                        type: string
-                        default: '96'
-            response:
-                200:
-                    description: display the top scorer 
-                    schema:
-                        type: object
-                        properties:
-                            message:
-                                type: string
-                                default: 'Success'
-                400:
-                    description: error in displaying the topscorer
-
