# backend/src/routes/matchRoutes.js
@@ -9,7 +9,7 @@ const {
     topScorer
 } = require('../controllers/matchController');
 
-router.get('/fixtures', authentication.verifyToken, fixtures);
+router.get('/fixtures',authentication.verifyToken, fixtures);
 router.get('/teams',authentication.verifyToken, teams);
 router.get('/standings',authentication.verifyToken, standings);
 router.get('/topScorer',authentication.verifyToken, topScorer);
